--- a/mvcdemo/.settings/org.eclipse.wst.common.component
+++ b/mvcdemo/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="mvcdemo">
+    <wb-module deploy-name="InteriorFront">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -7,7 +7,7 @@
         <dependent-module archiveName="InteriorBackEnd-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/InteriorBackEnd/InteriorBackEnd">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="mvcdemo"/>
         <property name="java-output-path" value="/mvcdemo/target/classes"/>
+        <property name="context-root" value="InteriorFront"/>
     </wb-module>
 </project-modules>
