--- a/mvcdemo/src/main/webapp/resources/CSS/aboutuscss.css
+++ b/mvcdemo/src/main/webapp/resources/CSS/aboutuscss.css
@@ -46,8 +46,7 @@
     margin-bottom:10px;
 }
 .team-img:hover {
-    background:#f5f5f5;
-    
+    background-color:#f5f5f5;
 }
 
 /* Social Icons */
