--- a/mvcdemo/.settings/org.eclipse.wst.common.component
+++ b/mvcdemo/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="InteriorFront">
+    <wb-module deploy-name="mvcdemo">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -8,6 +8,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/mvcdemo/target/classes"/>
-        <property name="context-root" value="InteriorFront"/>
+        <property name="context-root" value="mvcdemo"/>
     </wb-module>
 </project-modules>
