--- a/InteriorFront/src/main/webapp/resources/CSS/boostrap-css.css
+++ b/InteriorFront/src/main/webapp/resources/CSS/boostrap-css.css
@@ -2,9 +2,9 @@
 
 .footer-bs {
     background-color: #3c3d41;
-	padding: 60px 40px;
+	padding: 20px 40px;
 	color: rgba(255,255,255,1.00);
-	margin-bottom: 20px;
+	margin-bottom: 0px;
 	border-bottom-right-radius: 6px;
 	border-top-left-radius: 0px;
 	border-bottom-left-radius: 6px;
@@ -47,6 +47,8 @@
 	margin-bottom:10px;
 }
 .footer-bs .footer-ns p { font-size:12px; color:rgba(255,255,255,0.70); }
+
+.copy {text-align: center; margin: 0px auto; color: grey;height:20px;padding:0px 0px 5px 0px;background-color:white;}
 
 @media (min-width: 768px) {
 	.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
